[gd_scene format=3 uid="uid://dxri0c4a4d3r5"]

[ext_resource type="Script" uid="uid://bul1rfjbqplux" path="res://scripts/rings/ring.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://ctl7fy48aqpc5" path="res://sprites/rings/ring.png" id="3"]
[ext_resource type="Script" uid="uid://cuni5cshk4gg5" path="res://scripts/nodes/score_controller.gd" id="4"]
[ext_resource type="PackedScene" path="res://objects/particles/ring_sparkle.tscn" id="5"]

[sub_resource type="Animation" id="1"]
resource_name = "rotate"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ecp63"]
_data = {
&"rotate": SubResource("1")
}

[sub_resource type="AnimationNodeAnimation" id="2"]
animation = &"rotate"

[sub_resource type="AnimationNodeBlendTree" id="3"]
graph_offset = Vector2(-232, 74)
nodes/Animation/node = SubResource("2")
nodes/Animation/position = Vector2(100, 120)
node_connections = [&"output", 0, &"Animation"]

[sub_resource type="RectangleShape2D" id="4"]
size = Vector2(16, 16)

[sub_resource type="CapsuleShape2D" id="5"]
radius = 3.0
height = 6.0

[sub_resource type="Animation" id="6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="7"]
resource_name = "fade"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_flwr7"]
_data = {
&"RESET": SubResource("6"),
&"fade": SubResource("7")
}

[node name="Ring" type="CharacterBody2D" unique_id=503805486]
collision_layer = 0
collision_mask = 32768
script = ExtResource("1")

[node name="Sprite2D" type="Sprite2D" parent="." unique_id=1882262614]
texture = ExtResource("3")
hframes = 8
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2D" unique_id=1981667144]
libraries/ = SubResource("AnimationLibrary_ecp63")
autoplay = &"rotate"

[node name="AnimationTree" type="AnimationTree" parent="Sprite2D" unique_id=1182163704]
tree_root = SubResource("3")
anim_player = NodePath("../AnimationPlayer")

[node name="Area2D" type="Area2D" parent="." unique_id=245314510]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" unique_id=1778375221]
shape = SubResource("4")

[node name="RingSparkle" parent="." unique_id=355804640 instance=ExtResource("5")]
visible = false
z_index = 1

[node name="ScoreController" type="Node" parent="." unique_id=2115947403]
script = ExtResource("4")
rings = 1

[node name="Collision" type="CollisionShape2D" parent="." unique_id=256520926]
shape = SubResource("5")

[node name="despawn" type="Timer" parent="." unique_id=411704289]
wait_time = 4.167

[node name="fade" type="AnimationPlayer" parent="." unique_id=492611970]
root_node = NodePath("../Sprite2D")
libraries/ = SubResource("AnimationLibrary_flwr7")

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="despawn" to="." method="_on_despawn"]
[connection signal="animation_finished" from="fade" to="." method="_on_fade_animation_finished"]
